[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://models/skater/skater_work.tscn" type="PackedScene" id=2]
[ext_resource path="res://audio/sounds/roller_landing.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/sounds/jump.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/sounds/hurt.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/sounds/roller_slide.wav" type="AudioStream" id=6]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 1.63561, 0.0, 0, 0 ]

[sub_resource type="CapsuleShape" id=2]
radius = 0.625788
height = 1.59234

[sub_resource type="CapsuleShape" id=3]
radius = 0.624591
height = 0.634351

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )
speed = 7.0
jump_force = 6.0
move_factor = 0.1
move_factor_air = 0.02
jump_buffer_amount = 0.25
slide_duration = 0.75
blend_anim_curve = SubResource( 1 )
gravity = 37.0

[node name="skater" parent="." instance=ExtResource( 2 )]
transform = Transform( 4.94, 0, 0, 0, 4.94, 0, 0, 0, 4.94, 0, -0.517493, 0 )

[node name="CollisionShapeStanding" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.972232, 0 )
shape = SubResource( 2 )

[node name="CollisionShapeSliding" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.492314, 0 )
visible = false
shape = SubResource( 3 )

[node name="TimerHit" type="Timer" parent="."]
wait_time = 1.4
one_shot = true

[node name="LandingAudioPlayer" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85315, 0 )
stream = ExtResource( 3 )
unit_db = -6.883
unit_size = 2.6
attenuation_filter_db = -1.4

[node name="JumpAudioPlayer" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85315, 0 )
stream = ExtResource( 4 )
unit_db = -6.883
unit_size = 2.6
attenuation_filter_db = -1.4

[node name="HurtAudioPlayer" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85315, 0 )
stream = ExtResource( 5 )
unit_db = 1.0
unit_size = 2.6
attenuation_filter_db = -1.4

[node name="SlideAudioPlayer" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85315, 0 )
stream = ExtResource( 6 )
unit_db = 1.0
unit_size = 2.6
attenuation_filter_db = -1.4
[connection signal="timeout" from="TimerHit" to="." method="_on_TimerHit_timeout"]
